--- a/experiments/exp_bank_loan.ipynb
+++ b/experiments/exp_bank_loan.ipynb
@@ -11,39 +11,118 @@
     "import pandas as pd\n",
     "import sklearn.ensemble\n",
     "import numpy as np\n",
-    "from anchor import anchor_tabular"
+    "from anchor import anchor_tabular\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 3.  6. 15.  2. 12.  0.  4.  1.  2.  0.  1. 39.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset_folder = '../datasets/'\n",
-    "dataset = utils.load_dataset('adult', balance=True, dataset_folder=dataset_folder, discretize=True)\n",
-    "print(dataset.train[0])"
+    "train_path = \"../../datasets/bank_loan/credit_train.csv\"\n",
+    "train_data = pd.read_csv(train_path)\n",
+    "#print(train_data.nunique(axis=0))\n",
+    "\n",
+    "#print(train_data.isnull().sum())\n",
+    "#print(train_data.shape)\n",
+    "train_data[\"Months since last delinquent\"] = train_data[\"Months since last delinquent\"].fillna('999')\n",
+    "train_data.dropna(inplace=True)\n",
+    "#print(train_data.isnull().sum())\n",
+    "#print(train_data.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if dataset_name == \"bank_loan\":\n",
+    "feature_names = [\"Loan ID\", \"Customer ID\", \"Loan Status\", \"Current Loan Amount\", \n",
+    "                  \"Term\", \"Credit Score\", \"Annual Income\", \"Years in current job\", \n",
+    "                  \"Home Ownership\",\"Purpose\",\"Monthly Debt\",\"Years of Credit History\",\n",
+    "                  \"Months since last delinquent\",\"Number of Open Accounts\", \n",
+    "                  \"Number of Credit Problems\", \"Current Credit Balance\", \n",
+    "                  \"Maximum Open Credit\", \"Bankruptcies\", \"Tax Liens\"]\n",
+    "#feature_names = None\n",
+    "features_to_use = [3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 18]\n",
+    "categorical_features = [4, 7, 8, 9]\n",
+    "\n",
+    "target_idx = 2\n",
+    "dataset_folder = train_path = \"../../datasets/bank_loan/\"\n",
+    "discretize = True\n",
+    "balance = True\n",
+    "\n",
+    "purpose_map = {\n",
+    "    \"Debt Consolidation\" : \"Debt Consolidation\", \n",
+    "    \"other\" : \"other\", \n",
+    "    \"Home Improvements\" : \"Consumer credit\", \n",
+    "    \"Other\": \"other\", \n",
+    "    \"Business Loan\": \"Business\",\n",
+    "    \"Buy a Car\": \"Consumer credit\", \n",
+    "    \"Medical Bills\":\"Medical\", \n",
+    "    \"Buy House\": \"House\", \n",
+    "    \"Take a Trip\": \"Consumer credit\",\n",
+    "    \"major_purchase\": \"Consumer credit\",\n",
+    "    \"small_business\": \"Business\",\n",
+    "    \"moving\": \"Consumer credit\", \n",
+    "    \"wedding\": \"Consumer credit\",\n",
+    "    \"vacation\": \"Consumer credit\",\n",
+    "    \"Educational Expenses\": \"Consumer credit\",\n",
+    "    \"renewable_energy\": \"Consumer credit\"\n",
+    "}\n",
+    "\n",
+    "transformations = {\n",
+    "  9 : lambda x: utils.map_array_values(x, purpose_map)\n",
+    "}\n",
+    "\n",
+    "def filter_fn(data):\n",
+    "  df = pd.DataFrame(data)\n",
+    "  # key(\"Months since last delinquent\") = 12\n",
+    "  #df.replace(r'^\\s*$', np.NaN, regex=True)\n",
+    "  df = df.replace(b'', np.NaN)\n",
+    "  df = df.replace(b'NA', np.NaN)\n",
+    "  df[12] = df[12].fillna('999')\n",
+    "  df.dropna(inplace=True)\n",
+    "  return df.values.astype('|S128')\n",
+    "\n",
+    "dataset = utils.load_csv_dataset(\n",
+    "            os.path.join(dataset_folder, 'credit_train.csv'), target_idx, ',',\n",
+    "            feature_names=feature_names, features_to_use=features_to_use,\n",
+    "            categorical_features=categorical_features, discretize=discretize,\n",
+    "            balance=balance, feature_transformations=transformations, filter_fn = filter_fn, skip_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train 0.9350338780390594\n",
-      "Test 0.8489483747609943\n"
+      "[ 0.  1.  2.  0. 10.  3. 15.  0.  0.  3.  0.  0.  0.  0.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset.train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train 0.9844210679576312\n",
+      "Test 0.7813682678311499\n"
      ]
     }
    ],
@@ -56,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Age > 48.00', 'Self-emp-not-inc', 'Some-college', 'Married-civ-spouse', 'Sales', 'Husband', 'White', 'Male', '2', '0', '40.00 < Hours per week <= 45.00', 'United-States']\n",
-      "(12545, 12)\n",
-      "[ 3.  6. 15.  2. 12.  0.  4.  1.  2.  0.  1. 39.]\n",
-      "[[ 3.  6. 15.  2. 12.  0.  4.  1.  2.  0.  1. 39.]]\n"
+      "['Current Loan Amount <= 186648.00', 'Short Term', '724.00 < Credit Score <= 741.00', 'Annual Income <= 849110.00', '< 1 year', 'Rent', 'wedding', 'Monthly Debt <= 10260.19', 'Years of Credit History <= 13.50', 'Number of Open Accounts > 14.00', 'Number of Credit Problems <= 0.00', 'Current Credit Balance <= 112746.00', 'Maximum Open Credit <= 271986.00', 'Bankruptcies <= 0.00', 'Tax Liens <= 0.00']\n",
+      "(27473, 15)\n",
+      "[ 0.  1.  2.  0. 10.  3. 15.  0.  0.  3.  0.  0.  0.  0.  0.]\n",
+      "[[ 0.  1.  2.  0. 10.  3. 15.  0.  0.  3.  0.  0.  0.  0.  0.]]\n"
      ]
     }
    ],
@@ -91,45 +170,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Age', 'Workclass', 'Education', 'Marital Status', 'Occupation', 'Relationship', 'Race', 'Sex', 'Capital Gain', 'Capital Loss', 'Hours per week', 'Country']\n"
+      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append(sys.path[0] + '/..')\n",
+    "\n",
     "import arg_explainer as ae\n",
     "from importlib import reload\n",
     "reload(ae)\n",
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=False)"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=False, output_path='../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "213 212  args total\n",
-      "adult_75\n",
-      "len(R_atk) =  36404\n",
-      "5 highest degrees: [(frozenset({25, 47}), 209) (frozenset({52}), 209) (frozenset({53}), 209)\n",
-      " (frozenset({56}), 213) (frozenset({55}), 213)]\n",
-      "5 lowest degrees: [(frozenset({2, 36, 6}), 119) (frozenset({3, 28, 5}), 122)\n",
-      " (frozenset({2, 28}), 124) (frozenset({2, 36, 58}), 124)\n",
-      " (frozenset({3, 36, 7}), 125)]\n",
-      "edges per node: 171.3129411764706\n"
+      "1514 1689  args total\n",
+      "bankloan_75\n",
+      "len(R_atk) =  2129211\n",
+      "5 highest degrees: [(frozenset({61, 14}), 1634) (frozenset({35}), 1666)\n",
+      " (frozenset({32}), 1666) (frozenset({30}), 1666) (frozenset({63}), 1687)]\n",
+      "5 lowest degrees: [(frozenset({2, 28, 53, 38}),  990) (frozenset({2, 26, 52, 39}),  992)\n",
+      " (frozenset({3, 28, 55}),  994) (frozenset({2, 11, 53, 47}),  996)\n",
+      " (frozenset({2, 10, 54}), 1001)]\n",
+      "edges per node: 1329.5104589447394\n"
      ]
     }
    ],
@@ -137,219 +219,36 @@
     "G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "explainer.export_graph('tgf', '../saves')\n",
-    "explainer.export_graph('asp', '../saves')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max degree: 14\n",
-      "Generating 213 new data...\n",
-      "213 instances added\n",
-      "213 instances predicted\n",
-      "288 288\n",
-      "Generating arguments\n",
-      "3456  potential arg checked.\n",
-      "len  1 : 14 ,  12\n",
-      "19008  potential arg checked.\n",
-      "len  2 : 153 ,  92\n",
-      "63360  potential arg checked.\n",
-      "len  3 : 150 ,  144\n",
-      "142560  potential arg checked.\n",
-      "len  4 : 34 ,  37\n",
-      "228096  potential arg checked.\n",
-      "len  5 : 32 ,  8\n",
-      "266112  potential arg checked.\n",
-      "len  6 : 3 ,  0\n",
-      "228096  potential arg checked.\n",
-      "len  7 : 0 ,  0\n",
-      "Saving to  saves\\adult_75_extended_minimals.df\n",
-      "386 293  args total\n",
-      "adult_75_extended\n",
-      "len(R_atk) =  91203\n",
-      "5 highest degrees: [(frozenset({60}), 375) (frozenset({68}), 375) (frozenset({57}), 375)\n",
-      " (frozenset({53}), 385) (frozenset({52}), 385)]\n",
-      "5 lowest degrees: [(frozenset({2, 36, 6, 23}), 177) (frozenset({0, 38, 7, 50, 54}), 180)\n",
-      " (frozenset({0, 38, 7, 50, 23}), 180) (frozenset({2, 19, 6}), 181)\n",
-      " (frozenset({0, 38, 7, 41, 23}), 181)]\n",
-      "edges per node: 268.63917525773195\n",
-      "max degree: 10\n",
-      "Generating 385 new data...\n",
-      "385 instances added\n",
-      "385 instances predicted\n",
-      "673 673\n",
-      "Generating arguments\n",
-      "8076  potential arg checked.\n",
-      "len  1 : 0 ,  11\n",
-      "44418  potential arg checked.\n",
-      "len  2 : 133 ,  135\n",
-      "148060  potential arg checked.\n",
-      "len  3 : 355 ,  258\n",
-      "333135  potential arg checked.\n",
-      "len  4 : 262 ,  158\n",
-      "533016  potential arg checked.\n",
-      "len  5 : 52 ,  23\n",
-      "621852  potential arg checked.\n",
-      "len  6 : 5 ,  3\n",
-      "533016  potential arg checked.\n",
-      "len  7 : 0 ,  0\n",
-      "Saving to  saves\\adult_75_extended_minimals.df\n",
-      "807 588  args total\n",
-      "adult_75_extended\n",
-      "len(R_atk) =  383388\n",
-      "5 highest degrees: [(frozenset({10, 47}), 781) (frozenset({8}), 781)\n",
-      " (frozenset({49, 59, 69, 54}), 783) (frozenset({57}), 790)\n",
-      " (frozenset({46}), 792)]\n",
-      "5 lowest degrees: [(frozenset({0, 34, 56, 21}), 322) (frozenset({0, 33, 56}), 322)\n",
-      " (frozenset({0, 41, 34, 56}), 334) (frozenset({0, 42, 56}), 344)\n",
-      " (frozenset({0, 41, 18, 56}), 350)]\n",
-      "edges per node: 549.6602150537634\n",
-      "max degree: 15\n",
-      "Generating 792 new data...\n",
-      "792 instances added\n",
-      "792 instances predicted\n",
-      "1465 1465\n",
-      "Generating arguments\n",
-      "17580  potential arg checked.\n",
-      "len  1 : 0 ,  10\n",
-      "96690  potential arg checked.\n",
-      "len  2 : 171 ,  135\n",
-      "322300  potential arg checked.\n",
-      "len  3 : 494 ,  57\n",
-      "725175  potential arg checked.\n",
-      "len  4 : 399 ,  237\n",
-      "1160280  potential arg checked.\n",
-      "len  5 : 60 ,  134\n",
-      "1353660  potential arg checked.\n",
-      "len  6 : 23 ,  23\n",
-      "1160280  potential arg checked.\n",
-      "len  7 : 2 ,  3\n",
-      "725175  potential arg checked.\n",
-      "len  8 : 0 ,  1\n",
-      "322300  potential arg checked.\n",
-      "len  9 : 0 ,  0\n",
-      "Saving to  saves\\adult_75_extended_minimals.df\n",
-      "1149 600  args total\n",
-      "adult_75_extended\n",
-      "len(R_atk) =  559046\n",
-      "5 highest degrees: [(frozenset({62}), 1110) (frozenset({66}), 1110) (frozenset({60}), 1110)\n",
-      " (frozenset({68}), 1110) (frozenset({57}), 1116)]\n",
-      "5 lowest degrees: [(frozenset({0, 41, 34, 56}), 327) (frozenset({0, 41, 18, 56}), 327)\n",
-      " (frozenset({46, 34, 6}), 340) (frozenset({46, 31}), 342)\n",
-      " (frozenset({46, 43, 30}), 345)]\n",
-      "edges per node: 639.2750142938822\n"
-     ]
-    }
-   ],
-   "source": [
-    "from typing import OrderedDict\n",
-    "import networkx as nx\n",
-    "from sklearn import preprocessing\n",
-    "\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "#print(explainer.categorical_names)\n",
-    "#print(explainer.categorical_features)\n",
-    "#print(explainer.ordinal_features)\n",
-    "#le.set_params(explainer.feature_names)\n",
-    "\n",
-    "def generate_instance_random(constraints):\n",
-    "    instance = OrderedDict.fromkeys(explainer.dataset.columns)\n",
-    "    for f in constraints:\n",
-    "        col=explainer.col_p_feature[f]\n",
-    "        instance[col] = explainer.feature_names[f].split('_')[1]\n",
-    "        fill_instance(instance, 'random')\n",
-    "    return list(instance.values())\n",
-    "\n",
-    "def fill_instance(instance, strategy):\n",
-    "    if strategy == 'random':\n",
-    "        # fill the instance with a random values sampled from baseline dataset\n",
-    "        for i_, col in enumerate(instance.keys()):\n",
-    "            if instance[col] is None:\n",
-    "                instance[col] = explainer.dataset[col].sample(1, random_state=1).values[0]\n",
-    "    elif strategy == 'most_frequent':\n",
-    "        # fill the instance with the most frequent value for each column\n",
-    "        for k, i_ in enumerate(instance.keys()):\n",
-    "            if instance[k] is None:\n",
-    "                instance[k] = explainer.dataset[i_].value_counts().index[0]\n",
-    "    \n",
-    "def instance2encoded(instance, dataset):\n",
-    "    encoded = []\n",
-    "    for col in dataset.categorical_features:\n",
-    "        encoded.append(dataset.categorical_names[col].index(instance[col]))\n",
-    "    return np.array(encoded)\n",
-    "\n",
-    "def extend_dataset(G, dataset_t, y):\n",
-    "    hist = nx.degree_histogram(G)\n",
-    "    print('max degree:', max(hist))\n",
-    "    max_deg_node = sorted(G.degree, key=lambda x: x[1], reverse=True)\n",
-    "    attackers = G.edges(max_deg_node[0][0])\n",
-    "\n",
-    "    # predict new data\n",
-    "    transformed_data_plus = []\n",
-    "    y_plus = []\n",
-    "    print(\"Generating \" + str(len(attackers)) +\" new data...\")\n",
-    "    for a in attackers:\n",
-    "        # print(a, [explainer.feature_names[k] for k in a[1]])\n",
-    "        inst = generate_instance_random(set.union(set(a[0]), set(a[1])))\n",
-    "        transformed_data_plus.append(inst)\n",
-    "        y_plus.append(c.predict(instance2encoded(inst, dataset).reshape(1, -1))[0])\n",
-    "    print(str(len(transformed_data_plus)) + \" instances added\")\n",
-    "    print(str(len(y_plus)) + \" instances predicted\")\n",
-    "    \n",
-    "    #train_data_plus = train_data = pd.DataFrame(transformed_data[:nb_vals] + transformed_data_plus, columns=dataset.feature_names)\n",
-    "    dataset_t += transformed_data_plus\n",
-    "    y += y_plus\n",
-    "    print(len(dataset_t), len(y))\n",
-    "    train_data_plus = pd.DataFrame(dataset_t, columns=dataset.feature_names)\n",
-    "    #print(train_data_plus.shape)\n",
-    "    #print(y_plus)\n",
-    "    explainer = ae.ArgTabularExplainer(c, train_data_plus, y + y_plus, 'adult_' + str(nb_vals) + '_extended', compute=True)\n",
-    "\n",
-    "    G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
-    "    print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
-    "    return G, dataset_t, y\n",
-    "\n",
-    "dataset_t = transformed_data[:nb_vals]\n",
-    "G, dataset_t, y = extend_dataset(G, dataset_t, y)\n",
-    "G, dataset_t, y = extend_dataset(G, dataset_t, y)\n",
-    "G, dataset_t, y = extend_dataset(G, dataset_t, y)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1178 723  args total\n",
-      "adult_100_extended\n",
-      "len(R_atk) =  693851\n",
-      "5 highest degrees: [(frozenset({56, 68}), 1146) (frozenset({53}), 1165)\n",
-      " (frozenset({56, 59}), 1170) (frozenset({57}), 1174)\n",
-      " (frozenset({56, 52}), 1175)]\n",
-      "5 lowest degrees: [(frozenset({18, 28, 22}), 458) (frozenset({12, 31}), 464)\n",
-      " (frozenset({19, 36, 6, 55}), 464) (frozenset({19, 36, 22}), 466)\n",
-      " (frozenset({18, 28, 7}), 467)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "G = explainer.build_attack_graph(compute=True, display_graph=False)"
+    "nd = explainer.export_graph('tgf', '../saves')\n",
+    "nd = explainer.export_graph('asp', '../saves')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object ArgTabularExplainer.build_naive_extensions at 0x000001B1092AA3C0>\n",
+      "Pre-processing file...\n",
+      "Done\n",
+      "Streaming  asp_test_preprocessed.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "stream = explainer.build_naive_extensions(method='solver', file='asp_test.txt')\n",
+    "print(stream)\n",
+    "for l in stream:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
