--- a/experiments/exp_bankloan.ipynb
+++ b/experiments/exp_bankloan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -91,24 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Age', 'Workclass', 'Education', 'Marital Status', 'Occupation', 'Relationship', 'Race', 'Sex', 'Capital Gain', 'Capital Loss', 'Hours per week', 'Country']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arg_explainer as ae\n",
     "from importlib import reload\n",
     "reload(ae)\n",
     "import arg_explainer as ae\n",
-    "\n",
-    "print(dataset.feature_names)\n",
     "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=False)"
    ]
   },
@@ -137,8 +127,39 @@
     "G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "explainer.export_graph('tgf', '../saves')\n",
-    "explainer.export_graph('asp', '../saves')"
+    "def graph_to_tgf(G):\n",
+    "    tgf_file = 'tgf_test.tgf'\n",
+    "    node_dict = {}\n",
+    "    i_ = 0\n",
+    "    with open(tgf_file, 'w') as f:\n",
+    "        for n in G.nodes():\n",
+    "            i_ += 1\n",
+    "            node_dict[n] = i_\n",
+    "            f.write(str(i_)+ '\\n')\n",
+    "        f.write('#\\n')\n",
+    "        for u, v in G.edges():\n",
+    "            f.write(str(node_dict[u]) + ' ' + str(node_dict[v]) + '\\n')\n",
+    "            f.write(str(node_dict[v]) + ' ' + str(node_dict[u]) + '\\n')\n",
+    "\n",
+    "    return node_dict\n",
+    "    \n",
+    "def graph_to_asp(G):\n",
+    "    asp_file = 'asp_test.asp'\n",
+    "    node_dict = {}\n",
+    "    i_ = 0\n",
+    "    with open(asp_file, 'w') as f:\n",
+    "        for n in G.nodes():\n",
+    "            i_ += 1\n",
+    "            node_dict[n] = i_\n",
+    "            f.write(\"arg(\" + str(i_) + \").\\n\")\n",
+    "        for u, v in G.edges():\n",
+    "            f.write(\"att(\" + str(node_dict[u]) + ',' + str(node_dict[v]) + ').\\n')\n",
+    "            f.write(\"att(\" + str(node_dict[v]) + ',' + str(node_dict[u]) + ').\\n')\n",
+    "\n",
+    "    return node_dict\n",
+    "\n",
+    "tgf_dict = graph_to_tgf(G)\n",
+    "asp_dict = graph_to_asp(G)"
    ]
   },
   {
